add pluralization messages to i18n

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -43,6 +43,7 @@
     "invalid_form": "Please fill out all required fields."
   },
   "messages": {
+    "dashboard": "Dashboard",
     "create_": "Create {title}",
     "update_": "Update {title}",
     "update_user_password": "Update user password",
@@ -113,19 +114,19 @@
     "empty_table": "Sorry, nothing to display here :(",
 
     "home": "Home",
-    "post": "Post",
-    "category": "Category",
-    "user": "User",
-    "role": "Role",
-    "permission": "Permission",
+    "post": "Post | Posts",
+    "category": "Category | Categories",
+    "user": "User | Users",
+    "role": "Role | Roles",
+    "permission": "Permission | Permissions",
     "region": "Region",
-    "country": "Country",
-    "property_type": "Property type",
-    "state": "State",
-    "city": "City",
-    "promo": "Promotions",
-    "city_alias": "City alias",
-    "property": "Property",
+    "country": "Country | Countries",
+    "property_types": "Property types",
+    "state": "State | States",
+    "city": "City | Cities",
+    "promo": "Promo | Promotions",
+    "city_alias": "City alias | City aliases",
+    "listing": "Listing | Listings",
     "create_category_first": "Please create category first",
     "multiple_values": "You can write multiple values"
   },
