add module states

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -103,7 +103,7 @@
     "lowest": "Lowest first",
     "highest": "Highest first",
     "na": "N/A",
-    "id": "ID",
+    "id": "ID | IDs",
     "studio": "Studio",
     "with_media": "With Media",
     "features": "Features",
