Add page to reset password

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -16,6 +16,7 @@
     "reset": "Reset",
     "preview": "Preview",
     "yes": "Yes",
+    "close": "Close",
     "no": "No",
     "more": "More...",
     "add": "Add",
@@ -135,6 +136,9 @@
     "email": "E-Mail Address",
     "password": "Password",
     "forgot_password": "Forgot password?",
+    "change_password": "Change password",
+    "password_changed": "Your password was successfully updated",
+    "password_dont_match": "Passwords do not match",
     "remember_me": "Remember me",
     "sign_in": "Sign in",
     "logout": "Logout",
