Add action to update user

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -9,12 +9,15 @@
     "search": "Search",
     "search_live": "Start typing to Search",
     "filter": "Filter",
+    "show-filter": "Hide Filter",
+    "hide-filter": "Show Filter",
     "filter_by_time": "Filter by time",
     "filter_by_range": "Filter by range",
     "filters": "Filters",
     "sort": "Sort by",
     "reset": "Reset",
     "preview": "Preview",
+    "view": "View",
     "yes": "Yes",
     "close": "Close",
     "no": "No",
@@ -75,6 +78,11 @@
     "email": "Email",
     "password": "Password",
     "discount": "Discount",
+    "postal_code": "Postal Code",
+    "banner": "Banner",
+    "upload_company_banner": "Upload Company Banner",
+    "profile": "Profile",
+    "settings": "Settings",
     "use": "Use max times",
     "short_description": "Short description",
     "rules": "Rules",
@@ -112,12 +120,14 @@
     "utilities": "Utilities",
     "without_media": "Without Media",
     "empty_table": "Sorry, nothing to display here :(",
+    "website_url": "Website URL",
 
     "home": "Home",
     "post": "Post | Posts",
     "category": "Category | Categories",
     "user": "User | Users",
     "role": "Role | Roles",
+    "company": "Company | Companies",
     "permission": "Permission | Permissions",
     "region": "Region",
     "country": "Country | Countries",
