Implement gql types from gql schemas

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -74,6 +74,8 @@
     "notify": "Notification",
     "status": "Status",
     "system_name": "System name",
+    "url": "Url",
+    "feed": "Feed",
     "description": "Description",
     "email": "Email",
     "password": "Password",
@@ -108,6 +110,9 @@
     "or": "or",
     "not_allowed": "Not allowed",
     "allowed": "Allowed",
+    "cats_allowed": "Cats Allowed",
+    "small_dogs_allowed": "Small Dogs Allowed",
+    "large_dogs_allowed": "Large Dogs Allowed",
     "lowest": "Lowest first",
     "highest": "Highest first",
     "na": "N/A",
