Implement auto import lib

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -91,8 +91,8 @@
     "user_use_once": "One client can use it only once",
     "lat": "Latitude",
     "lng": "Longitude",
-    "bathrooms": "Baths",
-    "bedrooms": "Beds",
+    "bathroom": "Bathroom | Bathrooms",
+    "bedroom": "Bedroom | Bedrooms",
     "square_feet": "Square feet",
     "deposit": "Security deposit",
     "term": "Lease duration",
@@ -100,7 +100,8 @@
     "coordinates": "Coordinates",
     "price": "Price",
     "max_price": "Max price",
-    "postcode": "Postcode",
+    "postcode": "Postal code",
+    "write_own_options": "Select or write your own options",
     "location": "Location",
     "you_here": "You are here",
     "data_feed": "Data feed details",
@@ -109,6 +110,7 @@
     "password-confirm": "Password-confirm",
     "or": "or",
     "not_allowed": "Not allowed",
+    "not_pets_allowed": "No pets allowed",
     "allowed": "Allowed",
     "cats_allowed": "Cats Allowed",
     "small_dogs_allowed": "Small Dogs Allowed",
@@ -118,6 +120,7 @@
     "na": "N/A",
     "id": "ID | IDs",
     "studio": "Studio",
+    "media": "Media",
     "with_media": "With Media",
     "features": "Features",
     "amenities": "Amenities",
